--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-screens": "3.31.1",
     "react-native-select-dropdown": "^4.0.1",
     "react-native-svg": "^15.4.0",
+    "react-native-toast-message": "^2.2.0",
     "react-native-uuid": "^2.0.2",
     "react-native-web": "~0.19.10"
   },
